web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2026-01-10T20:15:24Z","generation":2,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"934","uid":"963c00f5-f558-4f3e-9ffb-bb54708799cc"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"2 [...]
  creationTimestamp: "2026-01-10T20:15:24Z"
  generation: 3
  labels:
    app: synergychat-web
  name: synergychat-web
  namespace: default
  resourceVersion: "69485"
  uid: 963c00f5-f558-4f3e-9ffb-bb54708799cc
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergychat-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
      - image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: Always
        name: synergychat-web
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2026-01-10T20:15:24Z"
    lastUpdateTime: "2026-01-10T20:15:32Z"
    message: ReplicaSet "synergychat-web-76dd6b65c5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-01-10T20:18:05Z"
    lastUpdateTime: "2026-01-10T20:18:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
